# voyager

./: .gitignore  .prettierignore  README.md  db.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
backend/: Cargo.toml
backend/src/: configuration.rs  context.rs  error.rs  lib.rs  main.rs  pscale.rs  result.rs  tracing.rs
backend/src/planetscale/: agent.rs  client.rs  config.rs  configuration.rs  mod.rs  organization.rs
backend/src/planetscale/queries/: authentication.rs  database.rs  mod.rs  organization.rs
backend/src/planetscale/responses/: authentication.rs  database.rs  mod.rs  organization.rs
backend/src/pscale/: mod.rs  responses.rs
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json  uno.config.js  vite.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: listbox.tsx
frontend/src/icons/: chevron-down.tsx  selector.tsx
frontend/src/routes/: index.tsx
