[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[lib]
name = "backend"

[dependencies]
async-trait = "0.1"
axum = "0.5"
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
