[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[lib]
name = "backend"

[dependencies]
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "2.5", features = ["json"] }
